2001-12-03  Mo DeJong  <mdejong@users.sourceforge.net>

	Add TK patch 481148 to implement TIP 74, the
	wm stackorder command.

	* doc/winfo.n: Update documentation for the winfo
	children command to indicate that top-level windows
	are not returned in stacking order.
	* doc/wm.n: Add documentation for wm stackorder.
	* generic/tkInt.decls (TkWmStackorderToplevel):
	Add decl for new function.
	* generic/tkIntDecls.h: Regen.
	* generic/tkStubInit.c: Regen.
	* tests/unixWm.test: Add stackorder command to test
	for wm command usage message.
	* tests/wm.test: Add new set of tests for generic
	window manager methods.
	* unix/tkUnixWm.c (Tk_WmCmd,
	TkWmStackorderToplevelWrapperMap,
	TkWmStackorderToplevel): Add unix implementation of
	new wm stackorder command.
	* win/tkWinWm.c (Tk_WmCmd,
	TkWmStackorderToplevelEnumProc,
	TkWmStackorderToplevelWrapperMap,
	TkWmStackorderToplevel): Add windows implementation
	of new wm stackorder command.

2001-12-03  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc: install target changes by request from
	Ryan Casey <scfiead@hotmail.com>.

2001-11-30  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/demos/widget: Further overhauling; shrank fonts, made
	better use of fonts, added an icon, fixed the About box.  Prompted
	by Bug #487442 from Vincent Wartelle.

2001-11-29  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* library/palette.tcl (tk_setPalette): Added heuristic to guess
	from the background whether to use black or white for the
	foreground when not told specifically.  Suggested by Chris Nelson,
	this makes the command fit the documentation better!

2001-11-27  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc: Fixed CAT32 target.  cat.c is located in the Tcl
	source, not the Tk source.

2001-11-27  D. Richard Hipp <drh@hwaci.com>

	* library/menu.tcl: Do not allow keyboard traversal of torn-off
	menus to visit the (invisible) tearoff bar.

2001-11-26  D. Richard Hipp <drh@hwaci.com>
